<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:padding="15dp"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="20dp"
            android:fontFamily="sans-serif-medium"
            android:padding="20dp"
            android:text="@string/about_us"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_about" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:fontFamily="sans-serif-medium"
            android:padding="20dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_terms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:fontFamily="sans-serif-medium"
            android:padding="20dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_terms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:fontFamily="sans-serif-medium"
            android:padding="20dp"
            android:text="@string/logout"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_exit" />

    </LinearLayout>
</layout>